--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: steve-location-api:latest
     container_name: steve-location-api
     environment:
-      PORT: "8080"
+      PORT: "8081"
       RABBIT_HOST: "rabbit"
       RABBIT_PORT: "5672"
       RABBIT_CONNECTION_ATTEMPTS: 10
@@ -13,7 +13,7 @@ services:
       CHANNEL_EXCHANGE: "location"
       CHANNEL_TOPIC: "location"
     ports:
-      - 8080:8080
+      - 8081:8081
     links:
       - rabbit
   steve-calendar-api:
@@ -34,6 +34,7 @@ services:
       RABBIT_RETRY_DELAY: 3
       RABBIT_EXCHANGE_OUT: ''
       RABBIT_TOPIC_OUT: 'travel'
+      AUTH_URL: 'aaaa'
     links:
       - rabbit
   rabbit:
@@ -41,3 +42,31 @@ services:
     container_name: rabbit
     ports:
       - 5672:5672
+  steve-auth-api:
+    image: steve-auth-api:latest
+    container_name: steve-auth-api
+    env_file:
+      - .google_credentials
+    environment:
+      PORT: "8080"
+      REDIRECT_URI: "http://127.0.0.1:8080/auth"
+      REQUEST_URL: "https://oauth2.googleapis.com/token"
+      MONGO_URI: mongodb://mongo:27017
+      MONGO_USER: root
+      MONGO_PASSWORD: root
+      MONGO_DATABASE: auth
+      MONGO_COLLECTION: credentials
+      CACHE_TTL: 360000
+    ports:
+      - 8080:8080
+    links:
+      - mongo
+  mongo:
+    image: mongo:4.2.3
+    container_name: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: "root"
+      MONGO_INITDB_ROOT_PASSWORD: "root"
+    ports:
+      - 27017:27017
+
