--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
       dockerfile: ./Dockerfile
     environment:
       GOOGLE_HOST: 'https://www.googleapis.com'
+      GOOGLE_MAPS_HOST: 'https://maps.googleapis.com'
       RABBIT_HOST_IN: 'rabbit'
       RABBIT_EXCHANGE_IN: 'location'
       RABBIT_BINDING_KEY_IN: 'location.*'
@@ -34,6 +35,8 @@ services:
       RABBIT_EXCHANGE_OUT: ''
       RABBIT_TOPIC_OUT: 'travel'
       AUTH_URL: 'http://steve-auth-api:8080'
+    env_file:
+      - .google_credentials
     links:
       - rabbit
       - steve-auth-api
