Notify travel channel
Signed-off-by: Piotr Persona <persona.piotr@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,7 @@ services:
       RABBIT_EXCHANGE_OUT: ''
       RABBIT_TOPIC_OUT: 'travel'
       AUTH_URL: 'http://steve-auth-api:8080'
+      TIME_DELTA: 7200
     env_file:
       - .google_credentials
     links:
