--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         IMAGE=th3re/steve-calendar-api
         TAG=$GITHUB_SHA-$GITHUB_RUN_ID
-        docker build -t $IMAGE:$TAG
+        docker build -t $IMAGE:$TAG .
         docker push $IMAGE:$TAG
         docker tag $IMAGE:$TAG $IMAGE:latest
         docker push $IMAGE:latest
