--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,6 @@ jobs:
         docker push $IMAGE:$TAG
         docker tag $IMAGE:$TAG $IMAGE:latest
         docker push $IMAGE:latest
-        docker tag $IMAGE:$TAG $IMAGE:$GITHUB_REF
-        docker push $IMAGE:$GITHUB_REF
+        BRANCH=$(git rev-parse --abbrev-ref HEAD)
+        docker tag $IMAGE:$TAG $IMAGE:$BRANCH
+        docker push $IMAGE:$BRANCH
